添加分布式事务

--- a/atcrowdfunding07-member-parent/atcrowdfunding10-member-mysql-provider/pom.xml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding10-member-mysql-provider/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>atcrowdfunding10-member-mysql-provider</artifactId>
 
+    <properties>
+        <lcn.last.version>4.2.0</lcn.last.version>
+    </properties>
+
     <dependencies>
         <!-- 整合 MyBatis -->
         <dependency>
@@ -61,6 +65,30 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codingapi</groupId>
+            <artifactId>transaction-springcloud</artifactId>
+            <version>${lcn.last.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.codingapi</groupId>
+            <artifactId>tx-plugins-db</artifactId>
+            <version>${lcn.last.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
