--- a/atcrowdfunding07-member-parent/atcrowdfunding10-member-mysql-provider/pom.xml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding10-member-mysql-provider/pom.xml
@@ -67,7 +67,7 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>com.codingapi</groupId>
             <artifactId>transaction-springcloud</artifactId>
             <version>${lcn.last.version}</version>
@@ -89,7 +89,7 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 </project>
